# Cartesia

./: .gitignore  Attribution.txt  COLLISION_FIX.md  FALLING_SAND_GUIDE.md  FIXES_2025-10-26.md  HOTFIX_SMOOTH_TERRAIN.md  MODERNIZATION.md  NOITA_INTEGRATION.md  PLAYER_ANIMATION_GUIDE.md  PYTHON_LIMITS.md  README.md  SMOOTH_TERRAIN_UPDATE.md  STARBOUND_REWRITE.md  WHATS_NEW.md  blocks.py  falling_sand_demo.py  gen_chunk.py  gui.py  icon.svg.import  main.py  main_old.py  play.py  play_sand.py  project.godot  pyproject.toml  requirements.txt
.godot/: global_script_class_cache.cfg
.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache8  filesystem_update4  player.tscn-editstate-2fb7eccc9df63dd44ec73b899eb5d6df.cfg  player.tscn-folding-2fb7eccc9df63dd44ec73b899eb5d6df.cfg  project_metadata.cfg  recent_dirs  script_editor_cache.cfg  wooden_shield.tscn-editstate-0bc6b189290d618f54922953fa70f4d6.cfg  world.tscn-editstate-4678cb2390397fd7bc0df7300ce49b99.cfg
.godot/imported/: Komiku - Hélice's Theme.mp3-a6fd1ec3284ce22741fd152d5b2ec6db.md5  Komiku - Hélice's Theme.mp3-a6fd1ec3284ce22741fd152d5b2ec6db.mp3str  Krook Tree Small.png-41009f456d877eeda4ebc6682d328b03.ctex  (+6261 more)
entities/: basic_tree.py  player.py  skeleton.py
godot/: player.gd  player.tscn  world.gd  world.tscn
godot/equipment/: equipment.gd  (+6 more)
img/: Krook Tree Small.png.import  Krook Tree.png.import  atlas.png.import  light.png.import  light4.png.import  sun.png.import  world_light.png.import
items/: bow.py  pickaxe.py
music/: Komiku - Hélice's Theme.mp3.import
spells/: README.md  mine.py
(+3250 files in other folders)
